[package]
name = "vitesse"
version = "0.1.0"

description = "A slick collection of building blocks to help you start building your next gpui app lighting fast."
homepage = "https://github.com/iamnbutler/vitesse"
repository = "https://github.com/iamnbutler/vitesse"

edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
