default-members = ["crates/vitesse"]

[workspace]
resolver = "2"
members = ["crates/vitesse", "crates/assets", "crates/common"]

[workspace.dependencies]
gpui = { git = "https://github.com/zed-industries/zed.git", rev = "1564bd82f25c3cef74da581489c31389810d39f7" }
rust-embed = "8.2.0"
anyhow = "1.0.79"
uuid = "1.8.0"
chrono = "0.4.38"
